--- a/orso-macros/Cargo.toml
+++ b/orso-macros/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "orso-macros"
-version.workspace = true
-edition.workspace = true
-authors.workspace = true
-description = "ORSO procedural macros for Model trait and FieldOrder introspection"
+version = "0.1.0"
+edition = "2021"
+authors = ["Your Name <your.email@example.com>"]
+description = "Procedural macros for ORSO ORM"
+license = "MIT OR Apache-2.0"
 
 [lib]
 proc-macro = true
@@ -11,10 +12,4 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0"
 quote = "1.0"
-syn = { version = "2.0", features = ["full"] }
-
-[dev-dependencies]
-orso = { path = ".." }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-chrono = { version = "0.4", features = ["serde"] }
+syn = { version = "2.0", features = ["full", "extra-traits"] }
