[5] chore: update authors and license information in Cargo.toml and add LICENSE files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "orso"
 description = "ORSO - A ORm for turSO and SQLite with zero-loss migrations"
 version = "0.1.0"
 edition = "2021"
-authors = ["Tia"]
+authors = ["https://github.com/tia-lab"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/tia-lab/orso"
 homepage = "https://github.com/tia-lab/orso"
