--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["database"]
 readme = "README.md"
 
 [dependencies]
-orso-macros = { path = "./orso-macros" }
+orso-macros = { path = "./orso-macros", version = "0.0.1" }
 libsql = "0.9.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
