--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,24 +1,50 @@
-[tasks.r-update]
-description = "Update versions and changelog for release"
+
+[tasks.r-pr]
+description = "Create release PR with version bumps and changelog"
 command = "release-plz"
-args = ["update"]
+args = ["release-pr"]
 
 [tasks.r-release]
-description = "Create git tags and publish to crates.io"
+description = "Publish to crates.io and create GitHub release (after PR merged)"
 command = "release-plz"
 args = ["release"]
 
 [tasks.r-check]
-description = "Check what release-plz would update (dry run)"
+description = "See what would be updated (dry run)"
 command = "release-plz"
 args = ["update", "--dry-run"]
 
+[tasks.r-update]
+description = "Update versions and changelog locally (manual workflow)"
+command = "release-plz"
+args = ["update"]
+
 [tasks.r-full]
-description = "Complete release workflow: update, commit, push, and release"
+description = "Complete manual workflow: update, commit, push, and release"
 dependencies = ["r-update"]
 script = [
   "git add .",
   "git commit -m 'chore: release'",
   "git push",
   "release-plz release",
+]
+
+[tasks.r-full-pr]
+description = "Complete PR workflow: create PR, wait for merge confirmation, then release"
+script = [
+  "echo 'Creating release PR...'",
+  "release-plz release-pr",
+  "echo 'Release PR created! Please review and merge it on GitHub.'",
+  "echo 'After merging, run: cargo make r-release'",
+  "echo 'Or run: cargo make r-release-auto (if you want to release immediately after merge)'",
+]
+
+[tasks.r-release-auto]
+description = "Auto-release after PR merge (use with caution)"
+script = [
+  "echo 'Pulling latest changes...'",
+  "git pull",
+  "echo 'Publishing release...'",
+  "release-plz release",
+  "echo 'Release published!'"
 ]
