--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -29,6 +29,7 @@ jobs:
       command: release
      env:
       GITHUB_TOKEN: ${{ secrets.RELEASE_PLZ_TOKEN }}
+      CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
  release-plz-pr:
   name: Release-plz PR
@@ -49,3 +50,4 @@ jobs:
       command: release-pr
      env:
       GITHUB_TOKEN: ${{ secrets.RELEASE_PLZ_TOKEN }}
+      CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
