--- a/orso/Cargo.toml
+++ b/orso/Cargo.toml
@@ -14,7 +14,7 @@ readme = "../README.md"
 
 [dependencies]
 orso-macros = { path = "../orso-macros", version = "0.0.2" }
-libsql = "0.9.14"
+libsql = "0.9.23"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dotenv = "0.15"
@@ -25,6 +25,10 @@ tracing = "0.1"
 anyhow = "1.0"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 async-trait = "0.1"
+lz4_flex = { version = "0.11", features = ["std"] }
+integer-encoding = "3"
+rayon = "1.7"
+rand = "0.8"
 
 [dev-dependencies]
 tracing-test = "0.2"
